--- a/env_config.json
+++ b/env_config.json
@@ -1,5 +1,5 @@
 {
-    "REPLACE_ME": {
+    "sample-vpc-environment-template": {
         "role": "arn:aws:iam::840805942392:role/ExampleGithubRole",
         "region": "ap-northeast-1",
         "state_bucket":"aws-proton-terraform-bucket-840805942392"
